# stm_audio_codec

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: LCD_task.rs  can_task.rs  cs43l22.rs  i2s.rs  lcd_task.rs  main.rs
